feat(api): added roles row endpoints
